Fix Linux menu bar item visibility after creating new profile.

The underlying code relied on OnBrowserSetLastActive() getting
called twice, which got fixed by crrev.com/483695, which broke
this. This CL fixes the code to not rely on that, fixing this
issue.

Specifically, AvatarMenu::RebuildMenu() relies on having up to
date info from ActiveBrowserChanged() call - but the order the
two functions were called was inversed.

BUG=740500
TEST=On Linux, from top-level "People" menu, click "Add person".
Then, open the "People" menu again and verify "Edit..." item is
enabled.

Change-Id: Ia1001defe073b91a94dca5b8f3533c42906ca526